--- a/majors.html
+++ b/majors.html
@@ -43,20 +43,21 @@
       <nav class="site-nav">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="majors.html">Explore Majors and Careers</a></li>
+          <li><a href="majors.html">Explore Majors</a></li>
+          <li><a href="careers.html">Explore Careers</a></li>
           <li><a href="gradschool.html">Explore Graduate Schools and Faculty</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="header-text">
-        <h1><span>waypoint: Majors and Careers Search</span></h1>
+        <h1><span>waypoint: Majors Search</span></h1>
         <p>Find your potential major and career path</p>
       </div>
     </div>
   </div>
             <div class="container">
                 <div class="row">
-                    <h1 class="sub-title">Explore Majors and Associated Careers</h1>
+                    <h1 class="sub-title">Explore Majors and Associated Paths</h1>
                 <div>
                     <div class="grid">
                         <a class="card" href="majors/anthropology.html">Anthropology</a>
