--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <nav class="site-nav">
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="majors.html">Explore Majors and Careers</a></li>
+            <li><a href="majors.html">Explore Majors</a></li>
+            <li><a href="careers.html">Explore Careers</a></li>
             <li><a href="gradschool.html">Explore Graduate Schools and Faculty</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
