--- a/majors/physics.html
+++ b/majors/physics.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE-edge">
-        <meta name="viewport" content="width-device-width, initial scale=1">
-        <link rel="stylesheet" href="style.css">
-        <title>Sean Dinh Lam - Education</title>
-    </head>
-    <body>
-        <div id="header">
-            <div class ="container">
-                <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="majors.html">Explore Majors</a></li>
-                    <li><a href="gradschool.html">Explore Graduate Schools</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                </nav>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <h1 class="sub-title">Physics</h1>
-                <div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>waypoint</title>
+
+    <!-- Fonts and Styles -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="../gradschool.css" />
+  </head>
+  <body>
+    <div id="header">
+      <div class="container">
+        <nav class="site-nav">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../majors.html">Explore Majors</a></li>
+            <li><a href="../gradschool.html">Explore Graduate Schools and Faculty</a></li>
+            <li><a href="../contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="header-text">
+          <h1><span>waypoint: Majors and Careers Search</i></span></h1>
+          <p>Helping liberal arts students navigate life after college</p>
+          <p>by Sean Lam, Colorado College '27</p>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
